# SimpleChess

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: connection.chessconf  default.chessconf
docs/: Doxyfile  README.md
src/: alert.hpp  board.hpp  connectedgame.hpp  console.hpp  file.hpp  gamewindow.hpp  localgame.hpp  main.cpp  main.hpp  move.hpp  newgame.hpp  reader.hpp  resosx.hpp  resosx.mm  resources.hpp  sounds.hpp  start.hpp  utils.hpp
